syntax = "proto3";

package server;

service Manager {
    rpc SaveVolume (SaveVolumeRequest) returns (Error) {};
    rpc ScheduleSaving (ScheduleSavingRequest) returns (Error) {};
    rpc ListEntries (Empty) returns (EntriesList) {};
}

message EntriesList {
    repeated Entry entries = 1;
}

message Entry {
    string next = 1;
}

message Empty {}

message ScheduleSavingRequest {
    string schedule = 1;
    SaveVolumeRequest volume = 2;
}

message SaveVolumeRequest {
    string volumeName = 1;
    string destination = 2;
}

message Error {
    int64 code = 1;
    string message = 2;
}